updating ArtworkService